--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "7.2.0",
     "@angular/common": "7.2.0",
     "@angular/compiler": "7.2.0",
     "@angular/core": "7.2.0",
@@ -23,7 +24,8 @@
     "bootstrap": "^4.2.1",
     "core-js": "^2.5.4",
     "jquery": "^3.3.1",
-    "ngx-bootstrap": "^3.1.3",
+    "ngx-bootstrap": "~3.2.0",
+    "npm": "^6.7.0",
     "popper.js": "^1.14.6",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
@@ -31,9 +33,9 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.11.0",
-    "@angular/cli": "~7.1.4",
-    "@angular/compiler-cli": "~7.1.0",
-    "@angular/language-service": "~7.1.0",
+    "@angular/cli": "~7.2.0",
+    "@angular/compiler-cli": "~7.2.0",
+    "@angular/language-service": "~7.2.0",
     "@schematics/angular": "7.2.0",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
